--- a/index.html
+++ b/index.html
@@ -470,5 +470,90 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-btn">
+          <svg
+            class="modal-close-btn-icon"
+            width="8"
+            height="8"
+            aria-label="modal close button"
+          >
+            <use></use>
+          </svg>
+        </button>
+        <p class="leav-form-back">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="review-form">
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-first-name"
+              >Name</label
+            >
+            <input
+              class="review-form-field"
+              type="text"
+              name="user_first_name"
+              id="user-first-name"
+              required
+              pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
+              title="Diana"
+            />
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-phone"
+              >Phone</label
+            >
+            <input
+              class="review-form-field"
+              type="tel"
+              name="user_phone_number"
+              id="user-phone"
+              required
+              pattern="[0-9]{3}-[0-9]{3}[0-9]{2}-[0-9]{2}"
+              title="xxx-xxx-xx-xx"
+            />
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-email"
+              >Email</label
+            >
+            <input
+              class="review-form-field"
+              type="email"
+              name="user_email"
+              id="user-email"
+              required
+            />
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-comment"
+              >Comment
+            </label>
+            <textarea
+              class="review-form-message"
+              name="user_comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="review-form-checkbox-wrapper">
+            <input
+              class="review-form-checkbox"
+              type="checkbox"
+              name="user_policy"
+              id="user-policy"
+              value="true"
+              required
+            />
+            <label class="review-form-checkbox-label" for="user-policy"
+              >I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a></label
+            >
+          </div>
+          <button class="review-form-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
