--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             height="8"
             aria-label="modal close button"
           >
-            <use></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="leav-form-back">
@@ -490,15 +490,25 @@
             <label class="review-form-field-label" for="user-first-name"
               >Name</label
             >
-            <input
-              class="review-form-field"
-              type="text"
-              name="user_first_name"
-              id="user-first-name"
-              required
-              pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
-              title="Diana"
-            />
+            <div class="reviev-form-input-wrapper">
+              <input
+                class="review-form-field"
+                type="text"
+                name="user_first_name"
+                id="user-first-name"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
+                title="Diana"
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="18"
+                aria-label="modal close button"
+              >
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="review-form-field-wrapper">
             <label class="review-form-field-label" for="user-phone"
