--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
               <a class="privacy-policy-link" href="">Privacy Policy</a></label
             >
           </div>
-          <button class="review-form-btn" type="submit">Send</button>
+          <button class="review-form-btn button" type="submit">Send</button>
         </form>
       </div>
     </div>
