--- a/index.html
+++ b/index.html
@@ -468,6 +468,29 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-input">
+          <p class="review-text-footer">Subscribe</p>
+          <form>
+            <label
+              class="review-form-footer-label"
+              for="user-email-footer"
+            ></label>
+            <input
+              class="review-form-field-footer"
+              type="email"
+              name="user_email_footer"
+              id="user-email-footer"
+              placeholder="E-mail"
+              required
+            />
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-icon-btn" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-open">
@@ -490,7 +513,7 @@
             <label class="review-form-field-label" for="user-first-name"
               >Name</label
             >
-            <div class="reviev-form-input-wrapper">
+            <div class="review-form-input-wrapper">
               <input
                 class="review-form-field"
                 type="text"
@@ -514,7 +537,7 @@
             <label class="review-form-field-label" for="user-phone"
               >Phone</label
             >
-            <div class="reviev-form-input-wrapper">
+            <div class="review-form-input-wrapper">
               <input
                 class="review-form-field"
                 type="tel"
@@ -538,7 +561,7 @@
             <label class="review-form-field-label" for="user-email"
               >Email</label
             >
-            <div class="reviev-form-input-wrapper">
+            <div class="review-form-input-wrapper">
               <input
                 class="review-form-field"
                 type="email"
