--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         </div>
         <div class="footer-form-input">
           <p class="review-text-footer">Subscribe</p>
-          <form>
+          <form class="footer-form-box">
             <label
               class="review-form-footer-label"
               for="user-email-footer"
@@ -478,7 +478,7 @@
             <input
               class="review-form-field-footer"
               type="email"
-              name="user_email_footer"
+              name="user-email-footer"
               id="user-email-footer"
               placeholder="E-mail"
               required
@@ -495,7 +495,7 @@
     </footer>
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="modal-close-btn">
+        <button class="modal-close-btn" type="button">
           <svg
             class="modal-close-btn-icon"
             width="8"
@@ -510,15 +510,13 @@
         </p>
         <form class="review-form">
           <div class="review-form-field-wrapper">
-            <label class="review-form-field-label" for="user-first-name"
-              >Name</label
-            >
+            <label class="review-form-field-label" for="user-name">Name</label>
             <div class="review-form-input-wrapper">
               <input
                 class="review-form-field"
                 type="text"
-                name="user_first_name"
-                id="user-first-name"
+                name="user-name"
+                id="user-name"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
                 title="Diana"
@@ -526,7 +524,7 @@
               <svg
                 class="review-form-field-icon"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="modal person"
               >
                 <use href="./images/icons.svg#icon-person"></use>
@@ -541,7 +539,7 @@
               <input
                 class="review-form-field"
                 type="tel"
-                name="user_phone_number"
+                name="user-phone"
                 id="user-phone"
                 required
                 pattern="[0-9]{3}-[0-9]{3}[0-9]{2}-[0-9]{2}"
@@ -565,7 +563,7 @@
               <input
                 class="review-form-field"
                 type="email"
-                name="user_email"
+                name="user-email"
                 id="user-email"
                 required
               />
@@ -585,7 +583,7 @@
             </label>
             <textarea
               class="review-form-message"
-              name="user_comment"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
@@ -594,7 +592,7 @@
             <input
               class="review-form-checkbox visually-hidden"
               type="checkbox"
-              name="user_policy"
+              name="user-policy"
               id="user-policy"
               value="true"
               required
