--- a/index.html
+++ b/index.html
@@ -592,12 +592,12 @@
             <input
               class="review-form-checkbox visually-hidden"
               type="checkbox"
-              name="user-policy"
-              id="user-policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="user-policy"
+            <label class="review-form-checkbox-label" for="user-privacy"
               ><span class="reviev-form-own-checkbox"
                 ><svg
                   class="reviev-form-own-checkbox-icon"
