--- a/index.html
+++ b/index.html
@@ -471,10 +471,8 @@
         <div class="footer-form-input">
           <p class="review-text-footer">Subscribe</p>
           <form class="footer-form-box">
-            <label
-              class="review-form-footer-label"
-              for="user-email-footer"
-            ></label>
+            <label class="review-form-footer-label" for="user-email-footer">
+            </label>
             <input
               class="review-form-field-footer"
               type="email"
