--- a/index.html
+++ b/index.html
@@ -471,16 +471,17 @@
         <div class="footer-form-input">
           <p class="review-text-footer">Subscribe</p>
           <form class="footer-form-box">
-            <label class="review-form-footer-label" for="user-email-footer">
+            <label for="user-email-footer"
+              ><input
+                class="review-form-field-footer"
+                type="email"
+                name="user-email-footer"
+                id="user-email-footer"
+                placeholder="E-mail"
+                required
+              />
             </label>
-            <input
-              class="review-form-field-footer"
-              type="email"
-              name="user-email-footer"
-              id="user-email-footer"
-              placeholder="E-mail"
-              required
-            />
+
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="footer-icon-btn" width="24" height="24">
