--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="footer-form-input">
           <p class="review-text-footer">Subscribe</p>
           <form class="footer-form-box">
-            <label for="user-email-footer"
+            <label class="review-form-field-label" for="user-email-footer"
               ><input
                 class="review-form-field-footer"
                 type="email"
