--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
               </svg>
             </div>
           </div>
-          <div class="review-form-field-wrapper">
+          <div class="comment-wrapper">
             <label class="review-form-field-label" for="user-comment"
               >Comment
             </label>
